tenzir/tests/node/secrets/resolution_failure.tql
// node: true
// error: true
// skip: MacOS CI issues

from {}
assert_secret secret=secret("does-not-exist"), expected="nothing"
